kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: micropay
  labels:
    name: micropay
    environment: production
